<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".ui.buscar.BuscarFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre_buscar_edit_text_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/campo_obligatorio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_buscar_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_nombre"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buscar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:text="@string/buscar"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/telefono_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/valor_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deuda"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp" />

</LinearLayout>